--- a/bible.html
+++ b/bible.html
@@ -14,6 +14,8 @@
 
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="assets/css/main.css">
+		<link href="assets/fonts/font-awesome.min.css" rel="stylesheet">
+		<link href="assets/css/style.css" rel="stylesheet">
 		
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
@@ -40,7 +42,7 @@
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
 							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
-							<li class="menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
+							<li class="menu-item"><a href="contact.html">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
 
@@ -67,17 +69,22 @@
 									</ul>
 
 <center>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
-									<a href="events.html" class="button">See all events</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+									<a style = "color: white; margin:5px 5px 5px 0;" class="button yellow" href="#"><i  class = "fa fa-envelope" aria-hidden="true"></i> Glass button</a>
+
 </center>
 
 									</br>
@@ -90,17 +97,17 @@
 									</ul>
 
 <center>
-									<a href="events.html" class="button">Mathew - متّى</a>
-									<a href="events.html" class="button">Mark - مرقس</a>
-									<a href="events.html" class="button">Luke - لوقا</a>
-									<a href="events.html" class="button">John - يوحنا</a>
-									<a href="events.html" class="button">Acts - أعمال الرسل</a>
-									<a href="events.html" class="button">Romans - </a>
-									<a href="events.html" class="button">First Corinthians - </a>
-									<a href="events.html" class="button">Second Corinthians - </a>
-									<a href="events.html" class="button">Galathians - </a>
-									<a href="events.html" class="button">Ephesians - </a>
-									<a href="events.html" class="button">Philippians - </a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Mathew - متّى</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Mark - مرقس</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Luke - لوقا</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> John - يوحنا</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Acts - أعمال الرسل</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Romans - رومية</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> First Corinthians - كورنثوس الأولى</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Second Corinthians - كورنثوس الثاني</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Galathians - غلاطية</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Ephesians - أفسس</a>
+									<a style = "color: #715b3e; margin:5px 5px 5px 0;" href="events.html" class="button"><i  class = "fa fa-envelope" aria-hidden="true"></i> Philippians - فيلبي</a>
 </center>
 
 
