--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
 
 
 	<body>
+
 		<div class="site-content">
 			<header class="site-header">
 				<div class="container">
@@ -37,9 +38,9 @@
 							<li class="menu-item"><a href="index.html">Homepage</br>الرئيسية</a></li>
 							<li class="menu-item"><a href="about.html">About</br>من نحن</a></li>
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
-							<li class="menu-item current-menu-item"><a href="events.html">Events</br>أحداث</a></li>
+							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
 							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
-							<li class="menu-item"><a href="contact.html">Contact</br>اتصل بنا</a></li>
+							<li class="menu-item current-menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
 
@@ -49,7 +50,7 @@
 
 			<div class="page-head" data-bg-image="images/page-head-1.jpg">
 				<div class="container">
-					<h2 class="page-title">Events</h2>
+					<h2 class="page-title">Contact us</h2>
 				</div>
 			</div>
 
@@ -58,62 +59,34 @@
 					<div class="container">
 						<div class="row">
 							<div class="content col-md-8">
-								<h2 class="section-title">Upcoming Events</h2>
+
+								<h2 class="section-title">Our Church History</h2>
 								<ul class="event-list large">
-									<li>
-										<h3 class="event-title"><a href="#">africa mission trip</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> Africa</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque recusandae rerum alias veniam nisi repellat, libero molestias praesentium dolore harum quisquam quam dolorum repudiandae et, earum doloremque repellendus fugiat ab.</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
-									<li>
-										<h3 class="event-title"><a href="#">Bible school</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> Saint paul church</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, consectetur explicabo beatae blanditiis dignissimos hic esse, voluptatum eaque maxime magni id possimus repudiandae ut exercitationem et temporibus ex vitae? Consequuntur!</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
-									<li>
-										<h3 class="event-title"><a href="#">praying for kids</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> true church</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit dicta dolores vero ipsum mollitia, laborum maiores beatae molestias numquam, eaque rerum optio facere nobis et voluptate, similique harum totam! At.</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
+									<hr>
+								<div style="text-align: right;">
+							       <img src="images/email.jpg" style="max-width: 50%; height: auto;" alt="Church" />
+							    </div>
+									</br>
+										<p>The Fellowship Bible Baptist Church (FBC) has been established in Beirut, Lebanon, in 1968 by the Baptist Bible Fellowship International (BBFI), an outreach mission situated in Springfield, Missouri (MO), USA. The Church enjoys an autonomic status having its own directing committee and standardized policies, and yet endorses cooperation with other domestic Churches.</p>
 								</ul>
+								</br>
+
+								<h2 class="section-title">Our Address</h2>
+								<ul class="event-list large">
+									<hr>
+									</br>
+										<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut. Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع</p>
+									</br>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d1805.8121694016431!2d35.49235773830322!3d33.89289386820036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x151f172714fa884d%3A0x7c38f3e44aad107c!2sFellowship+Baptist+Church%2C+Rue+Watwat%2C+Beirut%2C+Lebanon!3m2!1d33.8929505!2d35.493043899999996!5e0!3m2!1sen!2sca!4v1505497642154" width="700" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+								</ul>
+
 							</div>
 							<div class="sidebar col-md-3 col-md-offset-1">
 								<div class="widget">
-									<h3 class="widget-title">Categories</h3>
-									<ul class="arrow">
-										<li><a href="#">Perspiciatis unde</a></li>
-										<li><a href="#">Omnis iste natus</a></li>
-										<li><a href="#">Voluptatem accusantium</a></li>
-										<li><a href="#">Doloremque eaque</a></li>
-										<li><a href="#">Totam rem aperiam</a></li>
-									</ul>
+									<h3 class="widget-title">Who We Are</h3>
+									<p>Pastored and directed by the Rev. Joseph E. Haddad since its establishment, the FBC is active member of the renowned Higher Council of Evangelical Churches that operate in Syria and Lebanon, headed by the Dr. Rev. Salim Sahiouny.</br></br>The Church's leadership comprises an elite group of lay and highly educated members, who oversee its spiritual and physical growth, and further regulate its internal and external affairs that jibe with local and societal norms, civil laws, Christian ethics and anchored standards.</br></br>As a dynamic member of the Fellowship of Independent Baptist Churches in Lebanon, headed by Rev. Dr. Pierre Francis, the FBC solemnly recognizes the Evangelical Baptist faith. While operating as an independent entity, the Church honorably upholds the issue of collaborating with other venues of myriad faiths and denominations, adamantly serving the scope of spreading the gospel of Christ.</br></br>Established in biblical truths, the FBC reflects the Christian faith in a family-oriented environment and seeks to spread the good news in its vicinity and farther afield without coercion or duress.</br></br>The Church further reveals the salvation and amazing grace and love of the Lord Jesus Christ through preaching fundamental concepts, teachings and convictions manifested in the Holy Bible.</p>
 								</div>
 
-								<div class="widget">
-									<h3 class="widget-title">Donations</h3>
-									<p>Distinctio unde consequuntur delectus, repudiandae, impedit atque earum adipisci, explicabo perferendis.</p>
-									<a href="#" class="button">Make a donation</a>
-								</div>
-
-								<div class="widget">
-									<h3 class="widget-title">Text widget </h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum aliquam obcaecati velit, atque necessitatibus molestias ullam tempore itaque quidem sequi ea sed consectetur, eligendi cupiditate saepe! Hic veniam maiores explicabo.</p>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -196,7 +169,9 @@
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
 
+
 		</div>
+		
 
 		<script src="assets/js/jquery-1.11.1.min.js"></script>
 		<script src="assets/js/plugins.js"></script>
