--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
 							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
-							<li class="menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
+							<li class="menu-item"><a href="contact.html">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
 
