--- a/sermons.html
+++ b/sermons.html
@@ -191,7 +191,7 @@
 								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
 									<li><i class="fa fa-map-marker"></i> Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
-									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
+									<li><i class="fa fa-phone"></i> (01) 378 159</li>
 									<li><a href="mailto:fbcbaptistchurch@gmail.com"><i class="fa fa-envelope"></i><c class ="color"> fbcbaptistchurch@gmail.com</c></a></li>
 								</ul>
 							</div>
