--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,19 @@
 						<div class="row">
 							<div class="content col-md-8">
 
-								<h2 class="section-title">Our Church History</h2>
+								<h2 class="section-title">We Want To Hear From You</h2>
 								<ul class="event-list large">
 									<hr>
-								<div style="text-align: right;">
-							       <img style="float: right;" src="images/email.jpg" style="max-width: 50%; height: auto;" alt="Church" />
+								<div style="text-align: right; float: right;" >
+							       </br><img src="images/email.jpg" style="max-width: 100%; height: auto;" alt="Church" />
 							    </div>
 									</br>
-										<p>Time until next Sermon: <span id="timeLeft"></span></p>
+										<p>There are many ways for you to connect with us by contacting our ministry. Reach out to us by phone, email or social media and let us know how we can help.</p>
+										<p><strong>Phone:</strong> (01) 378 159</p>
+										<p><strong>Email:</strong> <a style="text-decoration: none; color: #000;" href="mailto:fbcbaptistchurch@gmail.com">fbcbaptistchurch@gmail.com</a></p>
+										<p><strong>Time until next Sermon:</strong> <span id="timeLeft"></span></p>
 								</ul>
-								</br></br></br>
+								</br>
 
 								<h2 class="section-title">Our Address</h2>
 								<ul class="event-list large">
@@ -85,7 +88,18 @@
 									<h3 class="widget-title">Who We Are</h3>
 									<p>Pastored and directed by the Rev. Joseph E. Haddad since its establishment, the FBC is active member of the renowned Higher Council of Evangelical Churches that operate in Syria and Lebanon, headed by the Dr. Rev. Salim Sahiouny.</p>
 								</div>
+								<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
+
+
+<div class="fb-page" data-href="https://www.facebook.com/facebook" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
 							</div>
 						</div>
 					</div>
@@ -100,9 +114,9 @@
 								<h3 class="widget-title">Our address</h3>
 								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
-									<li><i class="fa fa-map-marker"></i>Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
-									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
-									<li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
+									<li><i class="fa fa-map-marker"></i> Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
+									<li><i class="fa fa-phone"></i> (01) 378 159</li>
+									<li><a href="mailto:fbcbaptistchurch@gmail.com"><i class="fa fa-envelope"></i><c class ="color"> fbcbaptistchurch@gmail.com</c></a></li>
 								</ul>
 							</div>
 						</div>
@@ -141,7 +155,6 @@
 											<input type="text" class="form-control" id="antispam" name="_gotcha">
 										</div>
 									<div class="text-right"><button type="submit" id="submit" class="btn btn-default" disabled="disabled">Send Message</button></div>
-									
 								</form>
 
 							<script>
@@ -164,7 +177,7 @@
 						</div>
 					</div> <!-- .row -->
 
-					<p class="colophon">© 2017 Fellowship Bible Church. All right reserved</p>
+					<p class="colophon">© 2017 Fellowship Baptist Church. All rights reserved</p>
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
 
