--- a/events.html
+++ b/events.html
@@ -128,9 +128,9 @@
 								<h3 class="widget-title">Our address</h3>
 								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
-									<li><i class="fa fa-map-marker"></i>Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
-									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
-									<li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
+									<li><i class="fa fa-map-marker"></i> Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
+									<li><i class="fa fa-phone"></i> (01) 378 159</li>
+									<li><a href="mailto:fbcbaptistchurch@gmail.com"><i class="fa fa-envelope"></i><c class ="color"> fbcbaptistchurch@gmail.com</c></a></li>
 								</ul>
 							</div>
 						</div>
@@ -169,7 +169,6 @@
 											<input type="text" class="form-control" id="antispam" name="_gotcha">
 										</div>
 									<div class="text-right"><button type="submit" id="submit" class="btn btn-default" disabled="disabled">Send Message</button></div>
-									
 								</form>
 
 							<script>
@@ -192,7 +191,7 @@
 						</div>
 					</div> <!-- .row -->
 
-					<p class="colophon">© 2017 Fellowship Bible Church. All right reserved</p>
+					<p class="colophon">© 2017 Fellowship Baptist Church. All rights reserved</p>
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
 
