--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,14 @@
 
 
 	<body>
+		<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10";
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
 
 		<div class="site-content">
 			<header class="site-header">
@@ -88,18 +96,9 @@
 									<h3 class="widget-title">Who We Are</h3>
 									<p>Pastored and directed by the Rev. Joseph E. Haddad since its establishment, the FBC is active member of the renowned Higher Council of Evangelical Churches that operate in Syria and Lebanon, headed by the Dr. Rev. Salim Sahiouny.</p>
 								</div>
-								<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+								
+							<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/">Fellowship Baptist Church</a></blockquote></div>
 
-
-
-<div class="fb-page" data-href="https://www.facebook.com/facebook" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
 							</div>
 						</div>
 					</div>
