--- a/index.html
+++ b/index.html
@@ -71,23 +71,26 @@
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-1.jpg"></img>
-										<h3>Contact Us</h3></a>
+									<p><a href="contact.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-1.jpg"></img>
+										<h3>Contact Information</h3></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-2.jpg"></img></a></p>
+									<p><a href="sermons.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-2.jpg"></img>
+										<h3>Listen to Sermons</h3></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<p><a href="schedule.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-3.jpg"></img></a></p>
+									<p><a href="schedule.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-3.jpg"></img>
+										<h3>Monthly Calendar</h3></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-4.jpg"></img></a></p>
+									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-4.jpg"></img>
+										<h3>Read the Bible</h3></a></p>
 								</div>
 							</div>
 						</div> <!-- .row -->
