--- a/media.html
+++ b/media.html
@@ -57,7 +57,7 @@
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="row">
-						<iframe src="https://fbcbaptistchurch.sermon.net/embed" scrolling="no" frameborder="0" style="max-width: 100%; width: 1100px; min-height: 255px; overflow: hidden;" allowTransparency="true" allowfullscreen class="sermon-iframe"></iframe><script type="text/javascript" src="https://fbcbaptistchurch.sermon.net/static/common/js/iframe-resizer/iframeResizer.js"></script><script type="text/javascript" src="https://fbcbaptistchurch.sermon.net/ICampus/js/embeddedPlayerHelper.js"></script>
+						<p><iframe style="overflow-x: hidden;" src="https://peterhaddad98.github.io/fbc/media/media.html" frameborder="0" scrolling="yes" width="800" height="700"></iframe></p>
 
 
 
