--- a/bible.html
+++ b/bible.html
@@ -153,9 +153,16 @@
 							</div>
 							<div class="sidebar col-md-3 col-md-offset-1">
 								<div class="widget">
-									<h3 class="widget-title">Download Bible  and download it</h3>
-									<p>Download the Bible</p>
-									<a href="resources/Bible.zip" class="button" download>Download</a>
+									<h3 class="widget-title">Categories</h3>
+									<ul class="arrow">
+										<li><a href="https://media.fbcbaptistchurch.org/" target="_blank">Listen to Christian Music</a></li>
+										<li><a href="https://sermon.fbcbaptistchurch.org/" target="_blank">Listen to Sermons</a></li>
+										<li><a href="schedule.html">Monthly Calendar</a></li>
+										<li><a href="contact.html">Contact Information</a></li>
+									</ul>
+								</div>
+								<div class="widget">
+									<a style="margin-left: 6px;" href="resources/Bible.zip" class="button" download>Download the Bible</a>
 								</div>
 								<iframe style="overflow-x: hidden;" src="assets/biblegateway.html" frameborder="0" scrolling="yes" width="305" height="160"></iframe>
 							</div>
