--- a/media.html
+++ b/media.html
@@ -23,6 +23,14 @@
 
 
 	<body>
+		<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10";
+			fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
 		<div class="site-content">
 			<header class="site-header">
 				<div class="container">
@@ -57,7 +65,27 @@
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="row">
-						<p><iframe style="overflow-x: hidden;" src="https://peterhaddad98.github.io/fbc/media/media.html" frameborder="0" scrolling="yes" width="800" height="700"></iframe></p>
+							<div class="content col-md-8">
+						<p><iframe style="overflow-x: hidden;" src="https://peterhaddad98.github.io/fbc/media/media.html" frameborder="0" scrolling="yes" width="700" height="700"></iframe></p>
+						</div>
+							<div class="sidebar col-md-3 col-md-offset-1">
+								<div class="widget">
+									<h3 class="widget-title">Categories</h3>
+									<ul class="arrow">
+										<li><a href="https://media.fbcbaptistchurch.org/" target="_blank">Listen to Christian Music</a></li>
+										<li><a href="https://sermon.fbcbaptistchurch.org/" target="_blank">Listen to Sermons</a></li>
+										<li><a href="bible.html">Read the Bible</a></li>
+										<li><a href="schedule.html">Monthly Calendar</a></li>
+										<li><a href="contact.html">Contact Information</a></li>
+									</ul>
+								</div>
+								<div class="widget">
+									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/">Fellowship Baptist Church</a></blockquote></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 
