--- a/media.html
+++ b/media.html
@@ -66,7 +66,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="content col-md-8">
-						<p><iframe style="overflow-x: hidden;" src="https://peterhaddad98.github.io/fbc/media/media.html" frameborder="0" scrolling="yes" width="700" height="700"></iframe></p>
+						<p><iframe style="overflow-x: hidden;" src="https://www.fbcbaptistchurch.org/fbc/media/media.html" frameborder="0" scrolling="yes" width="700" height="700"></iframe></p>
 						</div>
 							<div class="sidebar col-md-3 col-md-offset-1">
 								<div class="widget">
