--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
 									<p>Pastored and directed by the Rev. Joseph E. Haddad since its establishment, the FBC is active member of the renowned Higher Council of Evangelical Churches that operate in Syria and Lebanon, headed by the Dr. Rev. Salim Sahiouny.</p>
 								</div>
 								<div class="widget">
-									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/">Fellowship Baptist Church</a></blockquote></div>
+									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"></blockquote></div>
 								</div>
 							</div>
 						</div>
