--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 							<li class="menu-item"><a href="about.html">About</br>من نحن</a></li>
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
-							<li class="menu-item current-menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
+							<li class="menu-item current-menu-item"><a href="contact.html">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
 
