--- a/media.html
+++ b/media.html
@@ -80,7 +80,7 @@
 									</ul>
 								</div>
 								<div class="widget">
-									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/">Fellowship Baptist Church</a></blockquote></div>
+									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"></blockquote></div>
 								</div>
 							</div>
 						</div>
