--- a/contact.html
+++ b/contact.html
@@ -141,8 +141,13 @@
 							</div>
 							<div class="sidebar col-md-3 col-md-offset-1">
 								<div class="widget">
-									<h3 class="widget-title">Who We Are</h3>
-									<p>Pastored and directed by the Rev. Joseph E. Haddad since its establishment, the FBC is active member of the renowned Higher Council of Evangelical Churches that operate in Syria and Lebanon, headed by the Dr. Rev. Salim Sahiouny.</p>
+									<h3 class="widget-title">Categories</h3>
+									<ul class="arrow">
+										<li><a href="https://media.fbcbaptistchurch.org/" target="_blank">Listen to Christian Music</a></li>
+										<li><a href="https://sermon.fbcbaptistchurch.org/" target="_blank">Listen to Sermons</a></li>
+										<li><a href="bible.html">Read the Bible</a></li>
+										<li><a href="schedule.html">Monthly Calendar</a></li>
+									</ul>
 								</div>
 								<div class="widget">
 									<div class="fb-page" data-href="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-hide-cta="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Fellowship-Baptist-Church-122343235090982/" class="fb-xfbml-parse-ignore"></blockquote></div>
