--- a/media/1.html
+++ b/media/1.html
@@ -4,16 +4,21 @@
 <head>
 <style>
 body, td
-{font-family: 'Shadows Into Light Two', Georgia, 'Bitstream Vera Serif', 'Times New Roman', Times, cursive; font-size: 20pt;}
+{font-family: 'Shadows Into Light Two', Georgia, 'Bitstream Vera Serif', 'Times New Roman', Times, cursive; font-size: 40pt;}
 </style>
 </head>
 <body>
 <table>
 
+</br>
 
-<center><a href="Naguib.html">Naguib Labib</a></center>
+<a href="http://sermonshare.net/" target="_blank">Update Sermons</a></br></br>
+<a href="https://drive.google.com/drive/folders/0B1wfINT5PHAgbThLVmN1Z1lHZVE?usp=sharing" target="_blank">Update Schedule</a><d style="font-size: 25pt;"> (Instructions Below)</d>
 
-
+<p style="font-size: 30pt;">Step 1: Click on Update Schedule (a new tab should open)</p>
+<p style="font-size: 30pt;">Step 2: Click on sign in (top right) and sign in with any google account</p>
+<p style="font-size: 30pt;">Step 3: Right click schedule.jpg image and click on manage versions</p>
+<p style="font-size: 30pt;">Step 4: Upload the new schedule</p>
 </table>
 </body>
 </html>
