--- a/assets/success.html
+++ b/assets/success.html
@@ -34,7 +34,7 @@
             <p>Your message to FBC has been received.<br>Please expect an email response within 2-5 business days.</p>
         </div>
         <div class="back">
-            <a href="www.fbcbaptistchurch.org">Back to www.fbcbaptistchurch.org</a>
+            <a href="https://www.fbcbaptistchurch.org/">Back to www.fbcbaptistchurch.org</a>
         </div>
     </div>
 </body>
