--- a/bible.html
+++ b/bible.html
@@ -242,7 +242,7 @@
 						</div>
 					</div> <!-- .row -->
 
-					<p class="colophon">© 2017 Fellowship Baptist Church. All rights reserved</p>
+					<p class="colophon">© 2017 Fellowship Baptist Church. All rights reserved | <a href="assets/privatepage.html"><c class ="color">Private Page</c></a></p>
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
 
