--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 								<ul class="event-list large">
 									<hr>
 									</br>
-										<p>The Fellowship Bible Baptist Church (FBC) has been established in Beirut, Lebanon, in 1968 by the Baptist Bible Fellowship International (BBFI), an outreach mission situated in Springfield, Missouri (MO), USA. The Church enjoys an autonomic status having its own directing committee and standardized policies, and yet endorses cooperation with other domestic Churches.</p>
+										<p style="font-size: 15px;">The Fellowship Baptist Church (FBC) has been established in Beirut, Lebanon, in 1968 by the Baptist Bible Fellowship International (BBFI), an outreach mission situated in Springfield, Missouri (MO), USA. The Church enjoys an autonomic status having its own directing committee and standardized policies, and yet endorses cooperation with other domestic Churches.</p>
 								</ul>
 								</br>
 
@@ -85,7 +85,7 @@
 								<ul class="event-list large">
 									<hr>
 									</br>
-										<p>The FBC steadfastly strives to faithfully present, and abide with, the spirit of the Word of God, as manifested and emphatically proclaimed in the Holy Bible and the recognized Gospels of the New Testament.</p>
+										<p style="font-size: 15px;">The FBC steadfastly strives to faithfully present, and abide with, the spirit of the Word of God, as manifested and emphatically proclaimed in the Holy Bible and the recognized Gospels of the New Testament.</p>
 								</ul>
 								</br>
 
