--- a/assets/privatepage.html
+++ b/assets/privatepage.html
@@ -90,6 +90,16 @@
             height: 100%;
         }
     </style>
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106147703-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106147703-1');
+    </script>
+
   </head>
   <body>
     <iframe id="contentFrame" frameBorder="0"></iframe>
