--- a/media.html
+++ b/media.html
@@ -19,6 +19,14 @@
 		<script src="js/ie-support/respond.js"></script>
 		<![endif]-->
 
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106147703-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106147703-1');
+    </script>
 	</head>
 
 
