--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" class="branding">
-						<img src="images/logo.jpg" alt="" class="logo" width="85" height="85">
+						<img src="images/logo.png" alt="" class="logo" width="85" height="85">
 						<h1 class="site-title">Fellowship Baptist Church</h1>
 					</a>
 
@@ -127,7 +127,7 @@
 								<ul class="event-list large">
 									<hr>
 								<div style="text-align: right; float: right;" >
-							       </br><img src="images/email2.jpg" style="max-width: 100%; height: auto;" alt="Church" />
+							       </br><img src="images/email2.png" style="max-width: 100%; height: auto;" alt="Church" />
 							    </div>
 									</br>
 										<p>There are many ways for you to connect with us by contacting our ministry. Reach out to us by phone, email or social media and let us know how we can help.</p>
