--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" class="branding">
-						<img src="images/logo.jpg" alt="" class="logo" width="85" height="85">
+						<img src="images/logo.png" alt="" class="logo" width="85" height="85">
 						<h1 class="site-title">Fellowship Baptist Church</h1>
 					</a>
 
