--- a/media/media.html
+++ b/media/media.html
@@ -10,7 +10,7 @@ body, td
 <body>
 <table>
 <tr>
-<td align="center"><b>Open Album</b></td>
+<td align="center"><b>Album</b></td>
 <td align="center"><b>Download (zip file)</b></td>
 </tr>
 <tr>
